cmake_minimum_required(VERSION 3.12)
project(main LANGUAGES C CXX)
set(CMAKE_INCLUDE_CURRENT_DIR on)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
include_directories(inc)
link_directories(lib)
add_compile_definitions(UNICODE _UNICODE)
add_executable(server src/server.cpp)
target_link_libraries(server ws2_32)
add_executable(client src/client.cpp)
target_link_libraries(client ws2_32)